[workspace]
members = [
    "bin/rockdb-consumer",
    "bin/rockdb-producer",
    "bin/mdbx-consumer",
    "bin/mdbx-producer",
]
default-members = [
    "bin/rockdb-consumer",
    "bin/rockdb-producer",
    "bin/mdbx-consumer",
    "bin/mdbx-producer",
]

[workspace.dependencies]
rocksdb = "0.21.0"
reth-libmdbx = { git = "https://github.com/paradigmxyz/reth.git" }
